Bug #1375 - Homepage: group description excerpts wrapping incorrectly
Fixed by adding hyphenator.js

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1093,10 +1093,6 @@ body{
                 border-radius: inherit;
                 padding: 5px;
                 margin-bottom: 15px;
-                p{
-                    word-wrap: break-word;
-                    word-break: break-all;
-                }
                 h4{
                     margin-top: 15px;
                 }
